Fix [Artifacts] Layout breaks on small width (#48)
- Hide collapse-all/expand-all when no grouping.
- Add placeholder to Labels filter.

--- a/src/common/YamlModal/yamlmodal.scss
+++ b/src/common/YamlModal/yamlmodal.scss
@@ -19,6 +19,7 @@
     position: relative;
     overflow-y: auto;
     padding: 15px;
+    word-wrap: break-word;
   }
   button {
     position: absolute;
